--- a/src/app/common/layout/app-header/app-header.component.html
+++ b/src/app/common/layout/app-header/app-header.component.html
@@ -1,5 +1,5 @@
 <header class="common-layout d-flex flex-ju-sb">
-  <a class="fs-20 color-theme" routerLink="/setting">
+  <a class="fs-20 color-theme fw-700" routerLink="/setting">
     <!-- conduit -->
     文章家园
   </a>
