--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,9 @@
 .banner {
+  padding: 40px;
   // background-color: $color-theme;
   .desc {
+    margin-top: 20px;
     font-style: italic;
+    letter-spacing: 2px;
   }
 }
