--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="banner bacc-theme">
-  <p class="text-center color-white">文章家园</p>
-  <p class="text-center desc color-white">分享angular知识的平台</p>
+  <p class="text-center color-white fs-40">文章家园</p>
+  <p class="text-center desc color-white fs-18">分享angular知识的平台</p>
 </div>
