--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -13,23 +13,52 @@ ul, ol, li {
   list-style: none;
 }
 
-
-// flex
-.d-flex {
-  display: flex;
+// 字体 => 修改为微软雅黑
+.hansan {
+  font-family: 'Source Han Sans CN';
 }
 
-.flex-ju-sb {
-  justify-content: space-between;
-}
-
-.flex-a-c {
-  align-items: center;
-}
 
 // 字体大小
+.fs-18 {
+  font-size: 18px;
+}
+
 .fs-20 {
   font-size: 20px;
+}
+
+.fs-40 {
+  font-size: 40px;
+}
+
+
+.font-22 {
+  font-size: 22px;
+}
+
+.font-24 {
+  font-size: 24px;
+}
+
+.font-28 {
+  font-size: 28px;
+}
+
+.font-30 {
+  font-size: 30px;
+}
+
+.font-36 {
+  font-size: 36px;
+}
+
+.font-48 {
+  font-size: 48px;
+}
+
+.fw-700 {
+  font-weight: 700;
 }
 
 // 字体颜色
@@ -59,7 +88,6 @@ ul, ol, li {
   background-color: var(--color-theme);
 }
 
-
 .common-layout {
   width: 1200px;
   margin: auto;
@@ -68,4 +96,134 @@ ul, ol, li {
 // text
 .text-center {
   text-align: center;
+}
+
+// flex
+.d-flex {
+  display: flex;
+}
+
+.flex-ju-sb {
+  justify-content: space-between;
+}
+
+.flex-a-c {
+  align-items: center;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-ju-c {
+  justify-content: center;
+}
+
+.flex-ju-sb {
+  justify-content: space-between;
+}
+
+.flex-ju-sa {
+  justify-content: space-around;
+}
+
+.flex-ju-end {
+  justify-content: flex-end;
+}
+
+.flex-a-start {
+  align-items: flex-start;
+}
+
+.flex-a-end {
+  align-items: flex-end;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+/* 文字超出省略 */
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.ellipsis-two {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.ellipsis-three {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+// ::-webkit-scrollbar {
+//   width: 0px;
+//   height: 0px;
+//   background-color: #0b797b;
+// }
+
+// ::-webkit-scrollbar-track {
+//   border-radius: 10px;
+//   background-color: #0b797b;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//   border-radius: 10px;
+//   background-color: #0b797b;
+// }
+
+
+/* 浮动效果 */
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.pointer-none {
+  pointer-events: none;
+}
+
+.pointer-all {
+  pointer-events: all;
 }
