--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>hello world</h1>
-<own-component />
-<app-my-component></app-my-component>
+<!-- <app-my-component></app-my-component>
 <app-btn-count></app-btn-count>
+<app-btn-count></app-btn-count> -->
+<app-directive></app-directive>
