--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>hello world</h1>
+<!-- <h1>hello world</h1> -->
 <!-- <app-my-component></app-my-component>
 <app-btn-count></app-btn-count>
 <app-btn-count></app-btn-count> -->
-<app-directive></app-directive>
+<!-- <app-directive></app-directive> -->
+
+<app-todolist></app-todolist>
