--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!-- <h1>hello world</h1> -->
-<!-- <app-my-component></app-my-component>
-<app-btn-count></app-btn-count>
-<app-btn-count></app-btn-count> -->
+<!-- <app-my-component></app-my-component> -->
+<!-- <app-btn-count></app-btn-count> -->
+<!-- <app-btn-count></app-btn-count> -->
 <!-- <app-directive></app-directive> -->
 
-<app-todolist></app-todolist>
+<!-- <app-todolist></app-todolist> -->
+
+<app-my-service></app-my-service>
