--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,9 @@
 
 <!-- <app-todolist></app-todolist> -->
 
-<app-my-service></app-my-service>
+<!-- <app-my-service *ngIf="!destroy"></app-my-service> -->
+
+<!-- <button (click)="comdestroy()">销毁组件</button> -->
+
+<!-- 父子组件传值 -->
+<app-parent></app-parent>
