--- a/src/app/component/directive/directive.component.html
+++ b/src/app/component/directive/directive.component.html
@@ -73,8 +73,8 @@
 <!-- 表单绑定 -->
 <form action="" #f="ngForm" (ngSubmit)="onSubmit(f)">
 
-  <input name="ipt" type="text" required ngModel #iptVal="ngModel">
-  <!-- <input name="ipt" type="text" ngModel #ipt="ngModel"> -->
+  <input name="ipt1" type="text" required ngModel #iptVal="ngModel">
+  <input name="ipt2" type="text" ngModel #ipt="ngModel">
 
   <input type="button" value="submit">
 </form>
