--- a/src/app/component/passValue/edit-nick-name/edit-nick-name.component.html
+++ b/src/app/component/passValue/edit-nick-name/edit-nick-name.component.html
@@ -1,4 +1,5 @@
 <div class="dit-nick-name">
   <p>edit-nick-name works!</p>
-
+  <input type="text" placeholder="请输入名称" [(ngModel)]="modifyNkname">
+  <button (click)="handleModiftNkname()">确定</button>
 </div>
