--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,8 @@
 <!-- <button (click)="comdestroy()">销毁组件</button> -->
 
 <!-- 父子组件传值 -->
-<app-parent></app-parent>
+<!-- <app-parent></app-parent> -->
+
+<!-- 路由管理 -->
+<h1>用户商城</h1>
+<router-outlet></router-outlet>
