--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/css/base.scss';
+@import './assets/css/common.scss';
+@import "~element-angular/theme/index.css";
